objects/Travel_Volume__c.object
<CustomObject>
    <description>Stores the account travel volumes from back office</description>
    <label>Travel Volume</label>
    <nameField>
        <displayFormat>TV-{0000000}</displayFormat>
        <label>Travel Volume Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Travel Volumes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <fields>
        <fullName>Test_Field_for_Dev_Ops_Testing__c</fullName>
        <description>Please ignore this field as this is created for testing.</description>
        <label>Test Field for Dev Ops Testing</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <description>Type of Trip</description>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Core</fullName>
                </value>
                <value>
                    <fullName>Avenir</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Travel Volumes</relationshipLabel>
        <relationshipName>Travel_Volumes</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>MatchID__c</fullName>
        <formula>CASESAFEID(Account__r.Id)&amp;Reported_Month__c&amp;Reported_Year__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MatchID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Car_Days__c</fullName>
        <label># Car Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Car_Spend__c</fullName>
        <label>Car Spend</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Hotel_Spend__c</fullName>
        <label>Hotel Spend</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Trips__c</fullName>
        <description>This represents total Avenir Trip Total for a defined period.</description>
        <label>Total Trips</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Current_Year__c</fullName>
        <formula>IF(Reported_Year__c = TEXT(YEAR(TODAY())), true, false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current Year</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Hotel_Nights__c</fullName>
        <label># Hotel Nights</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OBT_Adoption__c</fullName>
        <label>% OBT Adoption</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Reported_Year__c</fullName>
        <label>Reported Year</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reported_Month__c</fullName>
        <label>Reported Month</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TV_External_ID__c</fullName>
        <externalId>true</externalId>
        <label>TV External ID</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Air_Spend_Total__c</fullName>
        <label>Air Spend-Total</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Air_Transactions__c</fullName>
        <label># Air Transactions</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Air_Spend_Domestic__c</fullName>
        <label>Air Spend-Domestic</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>First_Day_of_Month__c</fullName>
        <label>First Day of Month</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Air_Spend_Transborder__c</fullName>
        <label>Air Spend-Transborder</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Air_Spend_International__c</fullName>
        <label>Air Spend-International</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <recordTypes>
        <fullName>DK_Travel_Volume</fullName>
        <active>true</active>
        <label>DK Travel Volume</label>
    </recordTypes>
    <recordTypes>
        <fullName>Account_Travel_Volume</fullName>
        <active>true</active>
        <label>Account Travel Volume</label>
    </recordTypes>
</CustomObject>